feat: product and product category create read
